# front-desk-poc

./: .env.example  .gitignore  Makefile  README.md  SUBMISSION.md  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py  routes.py  websocket.py
backend/app/dashboard/: server.py  service.py  template.py
backend/app/db/: database.py  schema.sql  seed.py
backend/app/models/: schemas.py
backend/app/services/: cartesia_session.py  cartesia_tts.py  child_info.py  date_utils.py  deepgram_session.py  handbook.py  llm.py  sentence_splitter.py
backend/data/: frontdesk.db  frontdesk.db-shm  frontdesk.db-wal
backend/data/handbook_index/: chunks.json  faiss.index
backend/scripts/: build_index.py  download_handbook.py
backend/tests/: test_cartesia_session.py  test_chat.py  test_child_info.py  test_dashboard.py  test_date_offset.py  test_llm_streaming.py  test_rag.py  test_rating.py  test_sentence_splitter.py  test_session_continuity.py  test_tts.py  test_voice_websocket.py
docs/: BrightWheel Front Desk Opportunities.txt  cartesia_ws_research.md  demo_questions.md  explanation.md  handbook_rag_explained.md  implementation_plan.md  llm_coordination.md  phase9_tts_directions.md  tts_owl_voice_mode_plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  OliviaVoiceView.tsx  PinModal.tsx  RatingModal.tsx  ReferencePanel.tsx
frontend/src/hooks/: useAudio.ts  useChat.ts  useVoice.ts
(+10 files in other folders)
